Fixed Divider on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,7 @@ body > div {
     --global-navbar-height: calc(60px + var(--tg-safe-area-inset-bottom));
     --tg-theme-liquid-glass-border: color-mix(in srgb, var(--tg-theme-section-separator-color) 60%, transparent);
     --tg-theme-navbar-selected: color-mix(in srgb, var(--tg-theme-section-separator-color) 45%, transparent);
+    --delete-ios-width: 45px;
 }
 
 * {
